changed the font style, managed the alignment of the 2nd text-section and find a recogonised a bug effecting the tranition.

--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Boldonse&family=Caveat+Brush&family=Comfortaa:wght@300..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Boldonse&family=Caveat+Brush&family=Comfortaa:wght@300..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lilita+One&family=M+PLUS+Rounded+1c:wght@300;400;700;800;900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 body { 
     font-family: sans-serif;
     background-color: #d7f1f8; 
@@ -10,6 +9,26 @@ body {
     display: flex; 
     justify-content: center; 
     padding: 20px; 
+}
+.headText{
+    font-family: "Lilita One", sans-serif;
+}
+.secondHeader{
+    font-family: "M PLUS Rounded 1c", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+}
+.buttonText{
+    font-family: "Lato", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    color: black;
+}
+#generateBtn{
+    transition: all 1s ease 0.5s;
+}
+#generateBtn:hover{
+    background-image: radial-gradient(ellipse at bottom left,#EDDD53,#C757B4,#2A7B9B);
 }
 .option{
     font-optical-sizing: auto;
@@ -46,19 +65,11 @@ textarea {
 }
 
 button { 
-    background-color: #0d76df;
-    color:white;
     border: solid #0061c3 0.8px; 
     padding: 9px 12px; 
-    font-weight: bolder;
-    transition: all 0.3s ease;
     border-radius: 50px; 
     cursor: pointer; 
-    font-size: 1rem; 
     margin: 5px;
-}
-button:hover { 
-    background-color: #57a0e9; 
 }
 .promptContainer { 
     display: flex;
